new bg new avatar

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <script src="src/js/index.js" defer></script>
 </head>
 <body>
-    <video autoplay muted loop id="rain">
-        <source src="src/images/rain.mp4" type="video/mp4">
-    </video>
+    <div id="rain"></div>
     <div class="container">
         <div class="hidden">
         <img class="avatar" src="src/images/avatarzin.png" alt="Eduardo Zaqueu">
