--- a/index.html
+++ b/index.html
@@ -41,5 +41,16 @@
 <footer class="hidden">
     <p>desenvolvido por Eduardo Zaqueu &copy; 2022</p>
 </footer>
+
+<script type="text/javascript" src="src/js/vanilla-tilt.js"></script>
+<script type="text/javascript">
+	VanillaTilt.init(document.querySelectorAll(".icon"), {
+		max: 35,
+		speed: 1000,
+        scale: 1.3,
+        perspective: 500
+	});
+</script>
+
 </body>
 </html>
