--- a/index.html
+++ b/index.html
@@ -6,34 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eduardo Zaqueu - Desenvolvedor Web</title>
     <!--CSS-->
+    <link rel="stylesheet" href="src/css/bg-animation.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/mobile.css">
     <!--JS-->
     <script src="src/js/index.js" defer></script>
 </head>
 <body>
-    <div id="rain"></div>
+    <div class="area" >
+        <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+        </ul>
+    </div >
     <div class="container">
         <div class="hidden">
         <img class="avatar" src="src/images/avatarzin.png" alt="Eduardo Zaqueu">
         <h1>Eduardo Zaqueu</h1>
         <p class="subtitle">Desenvolvedor Frontend</p>
-        </div>
+        <!--<button class="btn-portfolio"><a href="" target="_blank" class="port">PORTFOLIO</a></button>
+        </div>-->
         <ul class="list hidden">
             <li class="list-item">
-                <a href="https://www.linkedin.com/in/zaqueu1" target="_blank"><img class="icon" src="src/images/link.svg"></img></a>
+                <a href="https://www.linkedin.com/in/zaqueu1" target="_blank" class="list-link"><img class="icon" src="src/images/link.svg"></img></a>
                 <span class="hide">linkedin</span>
             </li>
             <li class="list-item">
-                <a href="https://github.com/zaqueu-1" target="_blank"><img class="icon" src="src/images/git.svg"></img></a>
+                <a href="https://github.com/zaqueu-1" target="_blank" class="list-link"><img class="icon" src="src/images/git.svg"></img></a>
                 <span class="hide">github</span>
             </li>
             <li class="list-item">
-                <a href="https://www.instagram.com/zq1fit/" target="_blank"><img class="icon" src="src/images/insta.svg"></img></a>
-                <span class="hide">instagram</span>
+                <a href="https://discordapp.com/users/856969236684603422" target="_blank" class="list-link"><img class="icon" src="src/images/disc.svg"></img></a>
+                <span class="hide">discord</span>
             </li>
             <li class="list-item">
-                <a href="mailto:bss.eduardo@yahoo.com.br" target="_blank"><img class="icon" src="src/images/mail.svg"></img></a>
+                <a href="mailto:bss.eduardo@yahoo.com.br" target="_blank" class="list-link"><img class="icon" src="src/images/mail.svg"></img></a>
                 <span class="hide">e-mail</span>
             </li>
         </ul>
