--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eduardo Zaqueu - Desenvolvedor Web</title>
+    <link rel="icon" type="image/x-icon" href="src/images/favicon.ico">
     <!--CSS-->
     <link rel="stylesheet" href="src/css/bg-animation.css">
     <link rel="stylesheet" href="src/css/style.css">
@@ -32,8 +33,8 @@
         <img class="avatar" src="src/images/avatarzin.png" alt="Eduardo Zaqueu">
         <h1>Eduardo Zaqueu</h1>
         <p class="subtitle">Desenvolvedor Frontend</p>
-        <!--<button class="btn-portfolio"><a href="" target="_blank" class="port">PORTFOLIO</a></button>
-        </div>-->
+        <button class="btn-portfolio"><a href="https://zaqueu.tech" target="_blank" class="port">PORTFOLIO</a></button>
+        </div>
         <ul class="list hidden">
             <li class="list-item">
                 <a href="https://www.linkedin.com/in/zaqueu1" target="_blank" class="list-link"><img class="icon" src="src/images/link.svg"></img></a>
