--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,18 +14,7 @@
 </head>
 <body>
     <div class="area" >
-        <ul class="circles">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-        </ul>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#a2a58a" fill-opacity="1" d="M0,160L20,154.7C40,149,80,139,120,128C160,117,200,107,240,90.7C280,75,320,53,360,74.7C400,96,440,160,480,176C520,192,560,160,600,138.7C640,117,680,107,720,122.7C760,139,800,181,840,218.7C880,256,920,288,960,277.3C1000,267,1040,213,1080,176C1120,139,1160,117,1200,138.7C1240,160,1280,224,1320,250.7C1360,277,1400,267,1420,261.3L1440,256L1440,320L1420,320C1400,320,1360,320,1320,320C1280,320,1240,320,1200,320C1160,320,1120,320,1080,320C1040,320,1000,320,960,320C920,320,880,320,840,320C800,320,760,320,720,320C680,320,640,320,600,320C560,320,520,320,480,320C440,320,400,320,360,320C320,320,280,320,240,320C200,320,160,320,120,320C80,320,40,320,20,320L0,320Z"></path></svg>
     </div >
     <div class="container">
         <div class="hidden">
@@ -47,6 +35,10 @@
             <li class="list-item">
                 <a href="https://discordapp.com/users/856969236684603422" target="_blank" class="list-link"><img class="icon" src="src/images/disc.svg"></img></a>
                 <span class="hide">discord</span>
+            </li>
+            <li class="list-item">
+                <a href="https://instagram.com/zaqueu.tech" target="_blank" class="list-link"><img class="icon" src="src/images/instagram.png"></img></a>
+                <span class="hide">instagram</span>
             </li>
             <li class="list-item">
                 <a href="mailto:bss.eduardo@yahoo.com.br" target="_blank" class="list-link"><img class="icon" src="src/images/mail.svg"></img></a>
